objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Cloufi_Twilio__From__c</fullName>
        <label>From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__MessageSid__c</fullName>
        <label>MessageSid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Message_Date__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Message_Status__c</fullName>
        <label>Message Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__To__c</fullName>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__From__c</fullName>
        <label>From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Message_Date__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cloufi__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloufi__Status__c</fullName>
        <label>Message Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__To__c</fullName>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Campaign_DS__c</fullName>
        <description>The name of the Call Campaign the record was called from</description>
        <inlineHelpText>The name of the Call Campaign the record was called from</inlineHelpText>
        <label>Call Campaign</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Disposition_DS__c</fullName>
        <description>Name of the disposition clicked for this call</description>
        <inlineHelpText>Name of the disposition clicked for this call</inlineHelpText>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Ended_DS__c</fullName>
        <description>Time stamp indicating when the call ended</description>
        <inlineHelpText>Time stamp indicating when the call ended</inlineHelpText>
        <label>Call Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_ID_DS__c</fullName>
        <description>External ID for the logged call used for troubleshooting purposes</description>
        <inlineHelpText>External ID for the logged call used for troubleshooting purposes</inlineHelpText>
        <label>Call ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Placed_DS__c</fullName>
        <description>Time stamp indicating when the call was initially placed</description>
        <inlineHelpText>Time stamp indicating when the call was initially placed</inlineHelpText>
        <label>Call Placed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Call_Started_DS__c</fullName>
        <description>Time stamp of when the call was connected to the prospect</description>
        <inlineHelpText>Time stamp of when the call was connected to the prospect</inlineHelpText>
        <label>Call Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Caller_ID_DS__c</fullName>
        <description>Caller ID that appeared to the prospect</description>
        <inlineHelpText>Caller ID that appeared to the prospect</inlineHelpText>
        <label>Caller ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Get_Recording__c</fullName>
        <description>Link to the call recording</description>
        <formula>if(DialSource__Recording_ID_DS__c != &quot;&quot;, HYPERLINK(&apos;/apex/DialSource__PlayRecording?id=&apos;+Id,&quot;Play Recording&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the call recording</inlineHelpText>
        <label>DS Get Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Agent_Wait_Time_secs__c</fullName>
        <description>Time the agents were waiting to receive the inbound call</description>
        <inlineHelpText>Time the agents were waiting to receive the inbound call</inlineHelpText>
        <label>Inbound Agent Wait Time (secs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_DNIS_Name__c</fullName>
        <description>Name associated with the Inbound DNIS</description>
        <inlineHelpText>Name associated with the Inbound DNIS</inlineHelpText>
        <label>Inbound DNIS Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_DNIS__c</fullName>
        <description>The Inbound Number that was dialed by the prospect</description>
        <inlineHelpText>The Inbound Number that was dialed by the prospect</inlineHelpText>
        <label>Inbound DNIS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Prospect_Wait_Time_secs__c</fullName>
        <description>Time in which the prospect was waiting for an agent to answer</description>
        <inlineHelpText>Time in which the prospect was waiting for an agent to answer</inlineHelpText>
        <label>Inbound Prospect Wait Time (secs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Inbound_Queue__c</fullName>
        <description>Name of the Inbound Queue in which the Inbound DNIS is associated to</description>
        <inlineHelpText>Name of the Inbound Queue in which the Inbound DNIS is associated to</inlineHelpText>
        <label>Inbound Queue</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__RTPQ_Group_ID__c</fullName>
        <description>DialSource Agent Group ID used to track which RTPQ group the call was presented to</description>
        <inlineHelpText>DialSource Agent Group ID used to track which RTPQ group the call was presented to</inlineHelpText>
        <label>RTPQ Group ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__RTPQ_Wait_Time__c</fullName>
        <description>Time in which the record sat in the queue before it was dialed by a rep</description>
        <inlineHelpText>Time in which the record sat in the queue before it was dialed by a rep</inlineHelpText>
        <label>RTPQ Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__Recording_ID_DS__c</fullName>
        <description>External DialSource ID used to track the call recording</description>
        <inlineHelpText>External DialSource ID used to track the call recording</inlineHelpText>
        <label>Recording ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Recycled_Until_DS__c</fullName>
        <description>Datetime the related record is Recycled Until</description>
        <inlineHelpText>Datetime the related record is Recycled Until</inlineHelpText>
        <label>Recycled Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Session_ID_DS__c</fullName>
        <description>External DialSource ID used to reference the DS Session this call is related to</description>
        <inlineHelpText>External DialSource ID used to reference the DS Session this call is related to</inlineHelpText>
        <label>Session ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Voicemail_DS__c</fullName>
        <description>Name of the Voicemail recording that was left to the prospect</description>
        <inlineHelpText>Name of the Voicemail recording that was left to the prospect</inlineHelpText>
        <label>Voicemail</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>